--- a/CSS Colored Markers/styles.css
+++ b/CSS Colored Markers/styles.css
@@ -13,10 +13,23 @@ h1 {
   margin: 10px auto;
 }
 
+.cap {
+  width: 60px;
+  height: 25px;
+}
+
 .sleeve {
   width: 110px;
   height: 25px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-left-width: 10px;
+  border-left-style: solid;
+  border-left-color: black;
+}
+
+.cap,
+.sleeve {
+  display: inline-block;
 }
 
 .red {
