--- a/CSS Colored Markers/styles.css
+++ b/CSS Colored Markers/styles.css
@@ -22,32 +22,24 @@ h1 {
   width: 110px;
   height: 25px;
   background-color: rgba(255, 255, 255, 0.5);
-  border-left-width: 10px;
-  border-left-style: solid;
-  border-left-color: black;
+  border-left: 10px double rgba(0, 0, 0, 0.75);
 }
 
-.cap,
-.sleeve {
+.cap, .sleeve {
   display: inline-block;
 }
 
 .red {
-  background: linear-gradient(
-    rgb(122, 74, 14),
-    rgb(245, 62, 113),
-    rgb(162, 27, 27)
-  );
+  background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+  box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
 }
 
 .green {
-  background: linear-gradient(#55680d, #71f53e, #116c31);
+  background: linear-gradient(#55680D, #71F53E, #116C31);
+  box-shadow: 0 0 20px 0 #3B7E20CC;
 }
 
 .blue {
-  background: linear-gradient(
-    hsl(186, 76%, 16%),
-    hsl(223, 90%, 60%),
-    hsl(240, 56%, 42%)
-  );
+  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+  box-shadow: 0 0 20px 0 blue;
 }
