--- a/HTML Registration Form/styles.css
+++ b/HTML Registration Form/styles.css
@@ -8,6 +8,19 @@ body {
   font-size: 16px;
 }
 
+h1,
+p {
+  margin: 1em auto;
+  text-align: center;
+}
+
+form {
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+}
+
 label {
   display: block;
   margin: 0.5rem 0;
