--- a/CSS Photo Gallery/styles.css
+++ b/CSS Photo Gallery/styles.css
@@ -1,4 +1,8 @@
-.gallery {
+* {
+  box-sizing: border-box;
+}
+
+/* .gallery {
   border: 5px solid red;
   width: 50%;
 }
@@ -7,4 +11,4 @@ img {
   width: 100%;
   border: 5px solid blue;
   padding: 5px;
-}
+} */
