--- a/CSS Photo Gallery/styles.css
+++ b/CSS Photo Gallery/styles.css
@@ -23,6 +23,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 16px;
   max-width: 1400px;
   margin: 0 auto;
   padding: 20px 10px;
@@ -33,6 +34,12 @@ body {
   max-width: 350px;
   height: 300px;
   object-fit: cover;
+  border-radius: 10px;
+}
+
+.gallery::after {
+  content: "";
+  width: 350px;
 }
 
 /* .gallery {
