--- a/CSS Nutrition Label/styles.css
+++ b/CSS Nutrition Label/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 16px;
 }
@@ -11,4 +15,14 @@ body {
   width: 270px;
   margin: 20px auto;
   padding: 0 7px;
+}
+
+h1 {
+  font-weight: 800;
+  text-align: center;
+  margin: -4px 0;
+}
+
+p {
+  margin: 0;
 }
