--- a/CSS Nutrition Label/styles.css
+++ b/CSS Nutrition Label/styles.css
@@ -47,3 +47,23 @@ p {
   background-color: black;
   border: 0;
 }
+
+.small-text {
+  font-size: 0.85rem;
+}
+
+.calories-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.calories-info h2 {
+  margin: 0;
+}
+
+.left-container p {
+  margin: -5px -2px;
+  font-size: 2em;
+  font-weight: 700;
+}
