--- a/CSS Nutrition Label/styles.css
+++ b/CSS Nutrition Label/styles.css
@@ -48,6 +48,10 @@ p {
   border: 0;
 }
 
+.medium {
+  height: 5px;
+}
+
 .small-text {
   font-size: 0.85rem;
 }
@@ -65,5 +69,11 @@ p {
 .left-container p {
   margin: -5px -2px;
   font-size: 2em;
+  font-weight: 700;
+}
+
+.calories-info span {
+  margin: -7px -2px;
+  font-size: 2.4em;
   font-weight: 700;
 }
