--- a/ACCESSIBILITY Quiz/styles.css
+++ b/ACCESSIBILITY Quiz/styles.css
@@ -18,3 +18,19 @@ header {
   aspect-ratio: 35 / 4;
   padding: 0.4rem;
 }
+
+h1 {
+  color: #f1be32;
+  font-size: min(5vw, 1.2em);
+}
+
+nav {
+  width: 50%;
+  max-width: 300px;
+  height: 50px;
+}
+
+nav > ul {
+  display: flex;
+  justify-content: space-evenly;
+}
