--- a/ACCESSIBILITY Quiz/styles.css
+++ b/ACCESSIBILITY Quiz/styles.css
@@ -97,13 +97,43 @@ input {
   font-size: 16px;
 }
 
+.info label,
+.info input {
+  display: inline-block;
+}
+
 .info input {
   width: 50%;
   text-align: left;
 }
 
+.info label {
+  width: 10%;
+  min-width: 55px;
+  text-align: right;
+}
+
+.question-block {
+  text-align: left;
+  display: block;
+  width: 100%;
+  margin-top: 20px;
+  padding-top: 5px;
+}
+
+p {
+  margin-top: 5px;
+  padding-left: 15px;
+  font-size: 20px;
+}
+
 p::before {
   content: "Question #";
+}
+
+.question {
+  border: none;
+  padding-bottom: 0;
 }
 
 .sr-only {
