--- a/CSS Balance Sheet/styles.css
+++ b/CSS Balance Sheet/styles.css
@@ -1,5 +1,14 @@
 span[class~="sr-only"] {
   border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  position: absolute;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0;
+  margin: -1px;
 }
 
 html {
@@ -9,4 +18,10 @@ html {
 body {
   font-family: sans-serif;
   color: #0a0a23;
+}
+
+h1 {
+  max-width: 37.25rem;
+  margin: 0 auto;
+  padding: 1.5rem 1.25rem;
 }
