--- a/CSS Balance Sheet/styles.css
+++ b/CSS Balance Sheet/styles.css
@@ -25,3 +25,30 @@ h1 {
   margin: 0 auto;
   padding: 1.5rem 1.25rem;
 }
+
+h1 .flex {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 1rem;
+}
+
+h1 .flex span:first-of-type {
+  font-size: 0.7em;
+}
+
+h1 .flex span:last-of-type {
+  font-size: 1.2em;
+}
+
+section {
+  max-width: 40rem;
+  margin: 0 auto;
+  border: 2px solid #d0d0d5;
+}
+
+#years {
+  display: flex;
+  justify-content: flex-end;
+  position: sticky;
+  top: 0;
+}
