--- a/CSS Balance Sheet/styles.css
+++ b/CSS Balance Sheet/styles.css
@@ -100,6 +100,28 @@ tbody th {
 }
 
 tr[class="total"] {
+  border-bottom: 4px double #0a0a23;
   font-weight: bold;
-  border: 4px double #0a0a23;
+}
+
+tr[class="total"] th {
+  text-align: left;
+  padding: 0.5rem 0 0.25rem 0.5rem;
+}
+
+tr.total td {
+  text-align: right;
+  padding: 0 0.25rem;
+}
+
+tr.total td:nth-of-type(3) {
+  padding-right: 0.5rem;
+}
+
+tr.total:hover {
+  background-color: #99c9ff;
+}
+
+td.current {
+  font-style: italic;
 }
