--- a/CSS Balance Sheet/styles.css
+++ b/CSS Balance Sheet/styles.css
@@ -68,10 +68,6 @@ section {
   padding: 0 0.75rem 1.5rem 0.75rem;
 }
 
-span {
-  font-weight: normal;
-}
-
 table {
   border-collapse: collapse;
   border: 0;
@@ -124,4 +120,32 @@ tr.total:hover {
 
 td.current {
   font-style: italic;
+}
+
+tr.data {
+  background-image: linear-gradient(
+    to bottom,
+    #dfdfe2 1.845rem,
+    white 1.845rem
+  );
+}
+
+tr.data th {
+  text-align: left;
+  padding-top: 0.3rem;
+  padding-left: 0.5rem;
+}
+
+tr.data th .description {
+  display: block;
+  font-weight: normal;
+  font-style: italic;
+  padding: 1rem 0 0.75rem;
+  margin-right: -13.5rem;
+}
+
+tr.data td {
+  vertical-align: top;
+  text-align: right;
+  padding: 0.3rem 0.25rem 0;
 }
