--- a/CSS Cat Painting/styles.css
+++ b/CSS Cat Painting/styles.css
@@ -24,6 +24,7 @@ body {
   position: absolute;
   top: -26px;
   left: -31px;
+  z-index: 1;
   border-top-left-radius: 90px;
   border-top-right-radius: 10px;
   transform: rotate(-45deg);
@@ -36,10 +37,20 @@ body {
   position: absolute;
   top: -26px;
   left: 163px;
+  z-index: 1;
   transform: rotate(45deg);
   border-top-left-radius: 90px;
   border-top-right-radius: 10px;
   border-left: 35px solid transparent;
   border-right: 35px solid transparent;
   border-bottom: 70px solid #5e5e5e;
+}
+
+.cat-left-inner-ear {
+  position: absolute;
+  top: 22px;
+  left: -20px;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 40px solid #3b3b4f;
 }
