--- a/CSS Cat Painting/styles.css
+++ b/CSS Cat Painting/styles.css
@@ -82,3 +82,25 @@ body {
   height: 40px;
   background-color: #000;
 }
+
+.cat-right-eye {
+  position: absolute;
+  top: 54px;
+  left: 134px;
+  border-radius: 60%;
+  transform: rotate(-25deg);
+  width: 30px;
+  height: 40px;
+  background-color: #000;
+}
+
+.cat-left-inner-eye {
+  position: absolute;
+  top: 8px;
+  left: 2px;
+  border-radius: 60%;
+  transform: rotate(10deg);
+  width: 10px;
+  height: 20px;
+  background-color: #fff;
+}
