--- a/CSS Cat Painting/styles.css
+++ b/CSS Cat Painting/styles.css
@@ -120,7 +120,19 @@ body {
   position: absolute;
   top: 108px;
   left: 85px;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  transform: rotate(180deg);
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
   border-bottom: 20px solid #442c2c;
+}
+
+.cat-mouth div {
+  width: 30px;
+  height: 50px;
+  border: 2px solid #000;
+  border-radius: 190%/190px 150px 0 0;
+  border-color: black transparent transparent transparent;
 }
