--- a/RESPONSIVE Piano/styles.css
+++ b/RESPONSIVE Piano/styles.css
@@ -13,7 +13,7 @@ html {
   width: 992px;
   height: 290px;
   margin: 80px auto;
-  padding: 90px 20px 0px 20px;
+  padding: 90px 20px 0 20px;
 }
 
 .keys {
@@ -21,4 +21,22 @@ html {
   width: 949px;
   height: 180px;
   padding-left: 2px;
+}
+
+.key {
+  background-color: #ffffff;
+  position: relative;
+  width: 41px;
+  height: 175px;
+  margin: 2px;
+  float: left;
+}
+
+.key.black--key::after {
+  background-color: #1d1e22;
+  content: "";
+  position: absolute;
+  left: -18px;
+  width: 32px;
+  height: 100px;
 }
