--- a/RESPONSIVE Piano/styles.css
+++ b/RESPONSIVE Piano/styles.css
@@ -42,10 +42,25 @@ html {
   left: -18px;
   width: 32px;
   height: 100px;
+  border-radius: 0 0 3px 3px;
 }
 
 .logo {
   width: 200px;
   position: absolute;
   top: 23px;
+}
+
+@media (max-width: 768px) {
+  #piano {
+    width: 358px;
+  }
+
+  .keys {
+    width: 318px;
+  }
+
+  .logo {
+    width: 150px;
+  }
 }
