--- a/RESPONSIVE Piano/styles.css
+++ b/RESPONSIVE Piano/styles.css
@@ -23,6 +23,7 @@ html {
   width: 949px;
   height: 180px;
   padding-left: 2px;
+  overflow: hidden;
 }
 
 .key {
@@ -62,5 +63,15 @@ html {
 
   .logo {
     width: 150px;
+  }
+}
+
+@media (max-width: 1199px) and (min-width: 769px) {
+  #piano {
+    width: 675px;
+  }
+
+  .keys {
+    width: 633px;
   }
 }
