--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -1,3 +1,9 @@
+:root {
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+  --building-color3: #cc6699;
+}
+
 * {
   border: 1px solid black;
   box-sizing: border-box;
@@ -8,6 +14,7 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
 .background-buildings {
   width: 100%;
   height: 100%;
@@ -15,15 +22,14 @@ body {
   align-items: flex-end;
   justify-content: space-evenly;
 }
+
 .bb1 {
   width: 10%;
   height: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  --building-color1: #aa80ff;
 }
-
 .bb1a {
   width: 70%;
   height: 10%;
@@ -51,11 +57,13 @@ body {
 .bb2 {
   width: 10%;
   height: 50%;
+  background-color: var(--building-color2, green);
 }
 
 .bb3 {
   width: 10%;
   height: 55%;
+  background-color: var(--building-color3, pink);
 }
 
 .bb4 {
