--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -2,6 +2,7 @@
   --building-color1: #aa80ff;
   --building-color2: #66cc99;
   --building-color3: #cc6699;
+  --building-color4: #538cc6;
 }
 
 * {
@@ -30,6 +31,7 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
 .bb1a {
   width: 70%;
   height: 10%;
@@ -57,16 +59,24 @@ body {
 .bb2 {
   width: 10%;
   height: 50%;
-  background-color: var(--building-color2, green);
+  background-color: var(--building-color2);
 }
 
 .bb3 {
   width: 10%;
   height: 55%;
-  background-color: var(--building-color3, pink);
+  background-color: var(--building-color3);
 }
 
 .bb4 {
   width: 11%;
   height: 58%;
+  background-color: var(--building-color4);
+}
+
+.foreground-buildings {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
