--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -16,12 +16,15 @@ body {
   overflow: hidden;
 }
 
-.background-buildings {
+.background-buildings,
+.foreground-buildings {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: space-evenly;
+  position: absolute;
+  top: 0;
 }
 
 .bb1 {
@@ -73,10 +76,38 @@ body {
   height: 58%;
   background-color: var(--building-color4);
 }
+.fb1 {
+  width: 10%;
+  height: 60%;
+  background-color: var(--building-color4);
+}
 
-.foreground-buildings {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
+.fb2 {
+  width: 10%;
+  height: 40%;
+  background-color: var(--building-color3);
+}
+
+.fb3 {
+  width: 10%;
+  height: 35%;
+  background-color: var(--building-color1);
+}
+
+.fb4 {
+  width: 8%;
+  height: 45%;
+  background-color: var(--building-color1);
+}
+
+.fb5 {
+  width: 10%;
+  height: 33%;
+  background-color: var(--building-color2);
+}
+
+.fb6 {
+  width: 9%;
+  height: 38%;
+  background-color: var(--building-color3);
 }
