--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -3,6 +3,7 @@
   --building-color2: #66cc99;
   --building-color3: #cc6699;
   --building-color4: #538cc6;
+  --window-color1: black;
 }
 
 * {
@@ -27,6 +28,7 @@ body {
   top: 0;
 }
 
+/* BACKGROUND BUILDINGS - "bb" stands for "background building" */
 .bb1 {
   width: 10%;
   height: 70%;
@@ -34,13 +36,12 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
 .bb1a {
   width: 70%;
   height: 10%;
   background-color: var(--building-color1);
+  background: linear-gradient(var(--building-color1), var(--window-color1));
 }
-
 .bb1b {
   width: 80%;
   height: 10%;
@@ -76,6 +77,8 @@ body {
   height: 58%;
   background-color: var(--building-color4);
 }
+
+/* FOREGROUND BUILDINGS - "fb" stands for "foreground building" */
 .fb1 {
   width: 10%;
   height: 60%;
@@ -98,12 +101,16 @@ body {
   width: 8%;
   height: 45%;
   background-color: var(--building-color1);
+  position: relative;
+  left: 10%;
 }
 
 .fb5 {
   width: 10%;
   height: 33%;
   background-color: var(--building-color2);
+  position: relative;
+  right: 10%;
 }
 
 .fb6 {
