--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -4,8 +4,8 @@
   --building-color3: #cc6699;
   --building-color4: #538cc6;
   --window-color1: black;
+  --window-color2: #8cd9b3;
 }
-
 * {
   border: 1px solid black;
   box-sizing: border-box;
@@ -48,15 +48,13 @@ body {
 .bb1c {
   width: 90%;
 }
+
 .bb1d {
   width: 100%;
   height: 70%;
-  background: linear-gradient(
-    orange,
-    var(--building-color1),
-    var(--window-color1)
-  );
+  background: linear-gradient(var(--building-color1) 50%, var(--window-color1));
 }
+
 .bb1-window {
   height: 10%;
   background: linear-gradient(var(--building-color1), var(--window-color1));
@@ -66,6 +64,11 @@ body {
   width: 10%;
   height: 50%;
   background-color: var(--building-color2);
+}
+
+.bb2b {
+  width: 100%;
+  height: 100%;
 }
 
 .bb3 {
