--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -6,6 +6,7 @@
   --window-color1: black;
   --window-color2: #8cd9b3;
 }
+
 * {
   border: 1px solid black;
   box-sizing: border-box;
@@ -63,12 +64,23 @@ body {
 .bb2 {
   width: 10%;
   height: 50%;
-  background-color: var(--building-color2);
 }
-
+.bb2a {
+  margin: auto;
+  border-top: 1vw solid #000;
+  border-bottom: 1vw solid #000;
+  border-left: 5vw solid #999;
+  border-right: 5vw solid #999;
+}
 .bb2b {
   width: 100%;
   height: 100%;
+  background: repeating-linear-gradient(
+    var(--building-color2),
+    var(--building-color2) 6%,
+    var(--window-color2) 6%,
+    var(--window-color2) 9%
+  );
 }
 
 .bb3 {
