--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -5,6 +5,7 @@
   --building-color4: #538cc6;
   --window-color1: black;
   --window-color2: #8cd9b3;
+  --window-color3: #d98cb3;
 }
 
 * {
@@ -65,13 +66,13 @@ body {
   width: 10%;
   height: 50%;
 }
+
 .bb2a {
-  margin: auto;
-  border-top: 1vw solid #000;
-  border-bottom: 1vw solid #000;
-  border-left: 5vw solid #999;
-  border-right: 5vw solid #999;
+  border-bottom: 5vh solid var(--building-color2);
+  border-left: 5vw solid transparent;
+  border-right: 5vw solid transparent;
 }
+
 .bb2b {
   width: 100%;
   height: 100%;
@@ -82,13 +83,17 @@ body {
     var(--window-color2) 9%
   );
 }
-
 .bb3 {
   width: 10%;
   height: 55%;
   background-color: var(--building-color3);
+  background: repeating-linear-gradient(
+    90deg,
+    var(--building-color3),
+    var(--building-color3),
+    var(--window-color3) 15%
+  );
 }
-
 .bb4 {
   width: 11%;
   height: 58%;
