--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -29,7 +29,8 @@ body {
   position: absolute;
   top: 0;
 }
-
+.building-wrap {
+}
 /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
 .bb1 {
   width: 10%;
@@ -83,10 +84,10 @@ body {
     var(--window-color2) 9%
   );
 }
+
 .bb3 {
   width: 10%;
   height: 55%;
-  background-color: var(--building-color3);
   background: repeating-linear-gradient(
     90deg,
     var(--building-color3),
@@ -94,9 +95,27 @@ body {
     var(--window-color3) 15%
   );
 }
+
 .bb4 {
   width: 11%;
   height: 58%;
+}
+
+.bb4a {
+  width: 3%;
+  height: 10%;
+  background-color: var(--building-color4);
+}
+
+.bb4b {
+  width: 80%;
+  height: 5%;
+  background-color: var(--building-color4);
+}
+
+.bb4c {
+  width: 100%;
+  height: 85%;
   background-color: var(--building-color4);
 }
 
