--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -37,6 +37,12 @@ body {
   align-items: center;
 }
 
+.window-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
 /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
 .bb1 {
   width: 10%;
@@ -121,16 +127,28 @@ body {
   height: 85%;
   background-color: var(--building-color4);
 }
+
 .bb4-window {
   width: 18%;
   height: 90%;
   background-color: var(--window-color4);
 }
+
 /* FOREGROUND BUILDINGS - "fb" stands for "foreground building" */
 .fb1 {
   width: 10%;
   height: 60%;
   background-color: var(--building-color4);
+}
+
+.fb1b {
+  width: 60%;
+  height: 10%;
+}
+
+.fb1c {
+  width: 100%;
+  height: 80%;
 }
 
 .fb2 {
