--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -139,11 +139,13 @@ body {
   width: 10%;
   height: 60%;
 }
+
 .fb1a {
   border-bottom: 7vh solid var(--building-color4);
   border-left: 2vw solid transparent;
   border-right: 2vw solid transparent;
 }
+
 .fb1b {
   width: 60%;
   height: 10%;
@@ -174,6 +176,19 @@ body {
   background-color: var(--building-color3);
 }
 
+.fb2a {
+  width: 100%;
+}
+
+.fb2b {
+  width: 100%;
+  height: 75%;
+}
+.fb2-window {
+  width: 22%;
+  height: 100%;
+  background-color: var(--window-color3);
+}
 .fb3 {
   width: 10%;
   height: 35%;
