--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -173,17 +173,21 @@ body {
 .fb2 {
   width: 10%;
   height: 40%;
-  background-color: var(--building-color3);
 }
 
 .fb2a {
   width: 100%;
+  border-bottom: 10vh solid var(--building-color3);
+  border-left: 1vw solid transparent;
+  border-right: 1vw solid transparent;
 }
 
 .fb2b {
   width: 100%;
   height: 75%;
+  background-color: var(--building-color3);
 }
+
 .fb2-window {
   width: 22%;
   height: 100%;
@@ -192,9 +196,19 @@ body {
 .fb3 {
   width: 10%;
   height: 35%;
+}
+
+.fb3a {
+  width: 80%;
+  height: 15%;
   background-color: var(--building-color1);
 }
 
+.fb3b {
+  width: 100%;
+  height: 35%;
+  background-color: var(--building-color1);
+}
 .fb4 {
   width: 8%;
   height: 45%;
