--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -3,12 +3,11 @@
   --building-color2: #66cc99;
   --building-color3: #cc6699;
   --building-color4: #538cc6;
-  --window-color1: black;
+  --window-color1: #bb99ff;
   --window-color2: #8cd9b3;
   --window-color3: #d98cb3;
   --window-color4: #8cb3d9;
 }
-
 * {
   border: 1px solid black;
   box-sizing: border-box;
@@ -193,6 +192,7 @@ body {
   height: 100%;
   background-color: var(--window-color3);
 }
+
 .fb3 {
   width: 10%;
   height: 35%;
@@ -209,6 +209,13 @@ body {
   height: 35%;
   background-color: var(--building-color1);
 }
+
+.fb3-window {
+  width: 25%;
+  height: 80%;
+  background-color: var(--window-color1);
+}
+
 .fb4 {
   width: 8%;
   height: 45%;
