--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -224,15 +224,25 @@ body {
   left: 10%;
 }
 
+.fb4a {
+  border-top: 5vh solid transparent;
+  border-left: 8vw solid var(--building-color1);
+}
+
 .fb4b {
   width: 100%;
   height: 89%;
   background-color: var(--building-color1);
+  display: flex;
+  flex-wrap: wrap;
 }
+
 .fb4-window {
   width: 30%;
   height: 10%;
   border-radius: 50%;
+  background-color: var(--window-color1);
+  margin: 10%;
 }
 .fb5 {
   width: 10%;
@@ -240,8 +250,20 @@ body {
   background-color: var(--building-color2);
   position: relative;
   right: 10%;
+  background: repeating-linear-gradient(
+      var(--building-color2),
+      var(--building-color2) 5%,
+      transparent 5%,
+      transparent 10%
+    ),
+    repeating-linear-gradient(
+      90deg,
+      var(--building-color2) 0%,
+      var(--building-color2) 12%,
+      var(--window-color2) 12%,
+      var(--window-color2) 44%
+    );
 }
-
 .fb6 {
   width: 9%;
   height: 38%;
