--- a/CSS City Skyline/styles.css
+++ b/CSS City Skyline/styles.css
@@ -291,14 +291,25 @@ body {
       var(--window-color3) 30%
     );
 }
+
 @media (max-width: 1000px) {
+  :root {
+    --building-color1: #000;
+    --building-color2: #000;
+    --building-color3: #000;
+    --building-color4: #000;
+    --window-color1: #777;
+    --window-color2: #777;
+    --window-color3: #777;
+    --window-color4: #777;
+  }
   .sky {
     background: radial-gradient(
       closest-corner circle at 15% 15%,
-      #ffcf33 0%,
-      #ffcf33 20%,
-      #ffff66 21%,
-      #bbeeff 100%
+      #ccc,
+      #ccc 20%,
+      #445 21%,
+      #223 100%
     );
   }
 }
