--- a/CSS Magazine/styles.css
+++ b/CSS Magazine/styles.css
@@ -41,3 +41,14 @@ main {
     );
   row-gap: 3rem;
 }
+
+.heading {
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 1.5rem;
+}
+
+.text {
+  grid-column: 2 / 3;
+}
