--- a/CSS Magazine/styles.css
+++ b/CSS Magazine/styles.css
@@ -56,6 +56,8 @@ img {
 
 .text {
   grid-column: 2 / 3;
+  font-size: 1.8rem;
+  letter-spacing: 0.6px;
 }
 
 .hero {
@@ -91,4 +93,8 @@ img {
 .social-icons {
   display: grid;
   font-size: 3rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  align-items: center;
 }
