--- a/CSS Magazine/styles.css
+++ b/CSS Magazine/styles.css
@@ -47,6 +47,11 @@ img {
   object-fit: cover;
 }
 
+hr {
+  margin: 1.5rem 0;
+  border: 1px solid rgba(120, 120, 120, 0.6);
+}
+
 .heading {
   grid-column: 2 / 3;
   display: grid;
@@ -58,6 +63,8 @@ img {
   grid-column: 2 / 3;
   font-size: 1.8rem;
   letter-spacing: 0.6px;
+  column-width: 25rem;
+  text-align: justify;
 }
 
 .hero {
@@ -97,4 +104,30 @@ img {
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
   align-items: center;
+}
+
+.first-paragraph::first-letter {
+  font-size: 6rem;
+  color: orangered;
+  float: left;
+  margin-right: 1rem;
+}
+
+.quote {
+  color: #00beef;
+  font-size: 2.4rem;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+}
+
+.quote::before {
+  content: '" ';
+}
+
+.quote::after {
+  content: ' "';
+}
+
+.text-with-images {
+  display: grid;
 }
