--- a/CSS Magazine/styles.css
+++ b/CSS Magazine/styles.css
@@ -130,4 +130,16 @@ hr {
 
 .text-with-images {
   display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 3rem;
+  margin-bottom: 3rem;
+}
+
+.lists {
+  list-style-type: none;
+  margin-top: 2rem;
+}
+
+.lists li {
+  margin-bottom: 1.5rem;
 }
