--- a/CSS Magazine/styles.css
+++ b/CSS Magazine/styles.css
@@ -143,3 +143,16 @@ hr {
 .lists li {
   margin-bottom: 1.5rem;
 }
+
+.list-title,
+.list-subtitle {
+  color: #00beef;
+}
+
+.image-wrapper {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(3, min-content);
+  gap: 2rem;
+  place-items: center;
+}
