--- a/CSS Ferris Wheel/styles.css
+++ b/CSS Ferris Wheel/styles.css
@@ -9,6 +9,8 @@
   max-height: 500px;
   animation-name: wheel;
   animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
 .line {
@@ -44,6 +46,7 @@
   position: absolute;
   border: 2px solid;
   transform-origin: 50% 0%;
+  animation: cabins 10s ease-in-out infinite;
 }
 
 .cabin:nth-of-type(1) {
@@ -77,5 +80,15 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes cabins {
+  0% {
+    transform: rotate(0deg);
+    background-color: yellow;
+  }
+  100% {
+    transform: rotate(-360deg);
   }
 }
