--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -7,6 +7,20 @@ body {
   overflow: hidden;
 }
 
+.left-mountain {
+  width: 300px;
+  height: 300px;
+  background: linear-gradient(rgb(203, 241, 228), rgb(80, 183, 255));
+  position: absolute;
+}
+
+.penguin {
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  margin-top: 75px;
+}
+
 .ground {
   width: 100vw;
   height: 400px;
