--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -32,6 +32,10 @@ body {
   width: 200px;
   height: 200px;
   background-color: yellow;
+  position: absolute;
+  border-radius: 50%;
+  top: -75px;
+  right: -75px;
 }
 
 .penguin {
@@ -39,6 +43,14 @@ body {
   height: 300px;
   margin: auto;
   margin-top: 75px;
+  z-index: 4;
+  position: relative;
+}
+
+.penguin-head {
+  width: 50%;
+  height: 45%;
+  background: linear-gradient(45deg, gray, rgb(239, 240, 228));
 }
 
 .ground {
