--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -47,10 +47,29 @@ body {
   position: relative;
 }
 
+.penguin * {
+  position: absolute;
+}
+
 .penguin-head {
   width: 50%;
   height: 45%;
   background: linear-gradient(45deg, gray, rgb(239, 240, 228));
+  border-radius: 70% 70% 65% 65%;
+  top: 10%;
+  left: 25%;
+}
+
+.penguin-body {
+  width: 53%;
+  height: 45%;
+  background: linear-gradient(
+    45deg,
+    rgb(134, 133, 133) 0%,
+    rgb(234, 231, 231) 25%,
+    white 67%
+  );
+  border-radius: 80% 80% 100% 100%;
 }
 
 .ground {
