--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -61,6 +61,12 @@ body {
   z-index: 1;
 }
 
+.face {
+  width: 60%;
+  height: 70%;
+  background-color: white;
+}
+
 .penguin-body {
   width: 53%;
   height: 45%;
@@ -81,6 +87,10 @@ body {
   width: 50%;
   height: 45%;
   background-color: gray;
+  top: 10%;
+  left: 25%;
+  border-radius: 0% 0% 100% 100%;
+  opacity: 70%;
 }
 
 .ground {
