--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -65,6 +65,16 @@ body {
   width: 60%;
   height: 70%;
   background-color: white;
+  border-radius: 70% 70% 60% 60%;
+  top: 15%;
+}
+
+.face.left {
+  left: 5%;
+}
+
+.face.right {
+  right: 5%;
 }
 
 .penguin-body {
