--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -106,6 +106,24 @@ body {
   right: 25%;
 }
 
+.eye-lid {
+  width: 150%;
+  height: 100%;
+  background-color: var(--penguin-face);
+  top: 25%;
+  left: -23%;
+  border-radius: 50%;
+}
+
+.blush {
+  width: 15%;
+  height: 10%;
+  background-color: pink;
+  position: absolute;
+  top: 65%;
+  border-radius: 50%;
+}
+
 .penguin-body {
   width: 53%;
   height: 45%;
