--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -119,9 +119,35 @@ body {
   width: 15%;
   height: 10%;
   background-color: pink;
-  position: absolute;
   top: 65%;
   border-radius: 50%;
+}
+
+.blush.left {
+  left: 15%;
+}
+
+.blush.right {
+  right: 15%;
+}
+
+.beak {
+  height: 10%;
+  background-color: orange;
+  border-radius: 50%;
+}
+
+.beak.top {
+  width: 20%;
+  top: 60%;
+  left: 40%;
+}
+
+.beak.bottom {
+  width: 16%;
+  position: absolute;
+  top: 65%;
+  left: 42%;
 }
 
 .penguin-body {
