--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -145,9 +145,16 @@ body {
 
 .beak.bottom {
   width: 16%;
-  position: absolute;
   top: 65%;
   left: 42%;
+}
+
+.shirt {
+  font: bold 25px Helvetica, sans-serif;
+}
+
+.shirt div {
+  font-weight: normal;
 }
 
 .penguin-body {
