--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -58,7 +58,11 @@ body {
 .penguin-head {
   width: 50%;
   height: 45%;
-  background: linear-gradient(45deg, gray, rgb(239, 240, 228));
+  background: linear-gradient(
+    45deg,
+    gray,
+    rgb(239, 240, 228)
+  );
   border-radius: 70% 70% 65% 65%;
   top: 10%;
   left: 25%;
@@ -151,10 +155,16 @@ body {
 
 .shirt {
   font: bold 25px Helvetica, sans-serif;
+  top: 165px;
+  left: 127.5px;
+  z-index: 1;
+  color: #6a6969;
 }
 
 .shirt div {
-  font-weight: normal;
+  font-weight:  initial;
+  top: 22.5px;
+  left: 12px;
 }
 
 .penguin-body {
@@ -181,6 +191,12 @@ body {
   left: 25%;
   border-radius: 0% 0% 100% 100%;
   opacity: 70%;
+}
+
+.foot{
+  width: 15%;
+  height: 30%;
+  background-color: orange;
 }
 
 .ground {
