--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -1,6 +1,7 @@
 :root {
   --penguin-face: white;
   --penguin-picorna: orange;
+  --penguin-skin: gray;
 }
 
 body {
@@ -59,7 +60,7 @@ body {
 .penguin-head {
   width: 50%;
   height: 45%;
-  background: linear-gradient(45deg, gray, rgb(239, 240, 228));
+  background: linear-gradient(45deg, var(--penguin-skin), rgb(239, 240, 228));
   border-radius: 70% 70% 65% 65%;
   top: 10%;
   left: 25%;
@@ -183,11 +184,28 @@ body {
   position: absolute;
   width: 50%;
   height: 45%;
-  background-color: gray;
+  background-color: var(--penguin-skin);
   top: 10%;
   left: 25%;
   border-radius: 0% 0% 100% 100%;
   opacity: 70%;
+}
+
+.arm {
+  width: 30%;
+  height: 60%;
+  background: linear-gradient(90deg, var(--penguin-skin), rgb(209, 210, 199));
+}
+
+.arm.left {
+  top: 35%;
+  left: 5%;
+  transform-origin: 0% 0%;
+}
+
+.arm.right {
+  top: 0%;
+  right: -5%;
 }
 
 .foot {
