--- a/CSS Penguin/styles.css
+++ b/CSS Penguin/styles.css
@@ -195,17 +195,24 @@ body {
   width: 30%;
   height: 60%;
   background: linear-gradient(90deg, var(--penguin-skin), rgb(209, 210, 199));
+  border-radius: 30% 30% 30% 120%;
+  z-index: -1;
 }
 
 .arm.left {
   top: 35%;
   left: 5%;
-  transform-origin: 0% 0%;
+  transform-origin: top left;
+  transform: rotate(130deg) scaleX(-1);
 }
 
 .arm.right {
   top: 0%;
   right: -5%;
+  transform: rotate(-45deg);
+}
+
+@keyframes wave {
 }
 
 .foot {
